added missing tests for user services